# DzWeb11

contacts_api/: .env  Dockerfile  docker-compose.yml  pyproject.toml
contacts_api/docs/docs/source/: contacts_api.rst  modules.rst
contacts_api/docs/source/: conf.py  index.rst
contacts_api/src/: alembic.ini  env.py
contacts_api/src/contacts_api/: crud.py  database.py  init_db.py  main.py  models.py  schemas.py
contacts_api/src/contacts_api/repository/: users.py
contacts_api/src/contacts_api/routers/: auth.py  contacts.py
contacts_api/src/contacts_api/services/: auth.py  cloudinary_config.py
contacts_api/src/contacts_api/templates/: email_verify.html
contacts_api/src/contacts_api/utils/: email_sender.py
contacts_api/src/migrations/versions/: 8e02657bcf3f_add_is_verified_column_to_users.py  cbd7cc399702_set_owner_id_not_null.py
contacts_api/tests/: test_contact_route.py  test_contacts.py
